  |_|   |_____|  |____| |__| |__|
       |_________________________|

  When traversing code, `py-partial-expression' climbs down and up
  all levels encountered, i.e. at opening `[' `py-expression' would return ['spam', 'eggs', 100, 1234], while one char behind at `''
  it yields `'spam','

- `py-find-definition' also detects non-imported definition in current buffer


New in version 6.0.11
---------------------

- improved Pymacs based code completion:
  - Completion of symbols from imported modules, functions, classes,
    module/class-level data members and instance variables in the current
    buffer. The information for this completion is updated whenever the file
    is saved.
  - Completion of local variables and function parameters.
  - Type deduction from constructor calls and literals.
  - Show help for modules, classes and functions.
  - Go to definition of modules, classes and functions.
  - Show signature of functions.
  - Support for auto-complete and company.

- remote shell support

- extended version of smart-operator added
  original smart-operator.el authored by
  William Xu <william.xwl@gmail.com>
  Url: http://xwl.appspot.com/ref/smart-operator.el

- py-electric-colon extended
  if `py-electric-colon-newline-and-indent-p' is non-nil,
  `py-electric-colon' calls `newline-and-indent'

- boolean `py-no-completion-calls-dabbrev-expand-p'
  If completion function should call dabbrev-expand
  when no completion found. Default is `t'

- boolean `py-shell-prompt-read-only', default t
  sets `comint-prompt-read-only', avoid unintentional edits

- customizable history variables/files
  py-python-history defaults to "~/.python_history"
  py-ipython-history defaults to "~/.ipython/history"

  If py-honor-PYTHONHISTORY-p is `t', $PYTHONHISTORY takes precedence, default is nil
  If py-honor-IPYTHONDIR-p is `t', $IPYTHONHISTORY precedes, default is nil

- customizable boolean `py-trailing-whitespace-smart-delete-p'